<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Weather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_location" translatable="false">Location</string>
    <string name="pref_measurement_unit" translatable="false">Measurement Unit</string>
    <string name="pref_measurement_unit_default_value">Celsius</string>
    <string name="pref_location_default_value" translatable="false">94043</string>
    <string-array name="measurement_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="measurement_units_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_enable_notifications" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_default_value" translatable="false">true</string>
    <string name="pref_enable_notifications_true_summary">Enabled</string>
    <string name="pref_enable_notifications_false_summary">Disabled</string>

    <string name="celsius">0</string>
    <string name="degrees"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <string name="preferred_string">Preferred Location</string>
    <string name="prompt_install_map_apps">Can\'t find a maps application</string>
    <string name="share">Share</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
        </string>

    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1d</xliff:g> %%</string>
    <string name="weather_condition_image_desc">Weather condition logo, shows an icon illustrating the weather condition,
        now the weather condition is %s</string>

    <string-array name="weather_conditions">
        <item>Storm</item>
        <item>Light raing</item>
        <item>Rain</item>
        <item>Snow</item>
        <item>Fog</item>
        <item>Clear</item>
        <item>Light clouds</item>
        <item>Clouds</item>
    </string-array>

    <!--Sync info -->
    <string name="account_type">Weather Account</string>
    <string name="content_authority">com.bloodstone.weather </string>

    <!--Notification info -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="last_notification">last_notification</string>

    <!--Location permission request message -->
    <string name="location_permission_request">In order to get accurate forecasts, Weather app requires access to your location</string>
</resources>
